# ComfyUI-Koolook

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  Glossary.md  LICENSE  NOTICE  README.md  RELEASING.md  SUPPORT.md  TODO.md  WORKFLOW.md  WORKLOG.md  __init__.py  config.json  constraints-test.txt  k_AI_pipline.py  k_ai_pipeline.py  k_audio_timeline.py  k_clean_latent_slice.py  k_easy_batch.py  k_easy_image_batch.py  k_easy_pattern.py  k_easy_resize.py  k_easy_track.py  k_easy_utility.py  k_easy_version.py  k_easy_wan22_prompt.py  k_loop_status.py  k_ltx_av_bind_schedule.py  k_ltx_guide_reference_strength.py  k_ltx_keyframe_soften_schedule.py  k_ltx_reference_bind_schedule.py  k_publish_contract.py  k_timeline_editor.py  k_video_combine.py  k_video_load.py  (+7 more)
.claude/: launch.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  release_checklist.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  registry-metrics.yml  release.yml
ACES_workflow/: USED_ocio.md
ACES_workflow/cocotools_io/: .tracking  pyproject.toml
ACES_workflow/errors/: Thumbs.db
ACES_workflow/radiance/: .tracking  __init__.py  cinematic_encoder-.js  nodes_camera.py  nodes_color_management.py  nodes_depth.py  nodes_exr.py  nodes_filmgrain.py  nodes_grade.py  nodes_hdr.py  nodes_help.py  nodes_loader.py  nodes_lut.py  nodes_prompt.py  nodes_radiance_viewer.py  nodes_resolution.py  nodes_sampler.py  nodes_upscale.py  pyproject.toml  requirements.txt
ACES_workflow/radiance/docs/: changelog.html  faq.html  index.html  installation.html  node_reference.html  radiance_viewer.html  tutorials.html
ACES_workflow/radiance/js/: cinematic_encoder.js  radiance_style.js  radiance_viewer.js
ACES_workflow/radiance/workflows/: Radiance_HDRI.json  Radiance_LOGC4.json
Runpod_Comfy/: README.md
Runpod_Comfy/config/: custom_nodes.lock.json  models.json
Runpod_Comfy/docker/: Dockerfile  start.sh
Runpod_Comfy/docs/: DEPLOY_RUNPOD.md
Runpod_Comfy/image/: DEPLOY_RUNPOD.md
Runpod_Comfy/profiles/: runpod.example.yaml
Runpod_Comfy/scripts/: bootstrap.sh  download_models.sh  install_custom_nodes.sh
Runpod_Comfy/setup/: USER_README.md
Runpod_Comfy/tools/: compile_profile.sh  new_profile.sh
_ComfyUI_settings/: 32b_EXR_CLI_argument.txt
_ComfyUI_workflows/: VACE-Fun_22_INPAINT_moose.json  WanVaceMultiFrame.json
_ComfyUI_workflows/Wan22_VACE-Fun/: wrp__Vace-F_INPAINT_FFLF-w.mask_mHaven.json  wrp__Vace-F_Multi-REF_Long-Video-w.mask_TRK.json
_Utils-CAM-track/: camera_pose_txt_template.md
_Utils-CAM-track/_DATA_2_play/: SETUP.txt
agent-tools/: LOOP_demo_pipeline_Codex.json  LOOP_demo_pipeline_Codex_HANDOFF.md  run_loop_demo_api_test.py
docs/: README.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_WORKFLOW.md  REPO_AUDIT_2026-02-14.md  RUNPOD_NOTICE.md  RUNPOD_PROGRESS.md
docs/automations/: CHEATSHEET.md  CONVENTIONS.md  README.md  index.html
docs/designs/: README.md  build_easy_image_batch_demo.py  easy-image-batch-behavior.md  easy-image-batch-demo-setup.json  easy-image-batch-matrix.html  sidebar-icon-proposals.html  snapshot-dialogs-redesign.md  snapshot-dialogs.html  snapshot-merge.html  snapshot-merge.md  update-banner.html
docs/investigations/: ltx-director-4k-transitions.md
docs/maintainers/: README.md  comfyui-server-api-testing.md  conventions.md  curated-sidebar.md  dependency-security.md  dev-iteration-loop.md  external-frontend-job-submitter-brief.md  external-frontend-kit.md  matte-pipeline.md  node-versioning.md  published-setup-external-ui-contract.md  published-setup-full-circle-plan.md  published-setup-loop.md  published-setups.md  registry-api.md  releasing.md  setup-runner-quickstart.md  visual-harness.md  workflows-sidebar.md
docs/reference/: README.md  glossary.md  versioning.md
docs/user_guide/: README.md
docs/workflows/: README.md
forks/: README.md  THIRD_PARTY.md  __init__.py  forks_manifest.yaml
forks/radiance_koolook/: README.md  __init__.py
forks/whatdreamscost_koolook/: README.md  __init__.py
matte/: NOTICE  __init__.py  nodes.py  pipeline.py
metrics/: README.md  comfy-registry-downloads.csv
nuke_CAM_exporter/: FIXES_AND_IMPROVEMENTS.md  README_TESTING.md  ROTATION_ANALYSIS.md  debug_rotation.py  nuke_ASCI-2-Pose_converter.py  test_nuke_scene.py  test_pipeline.sh  test_scene.nk  validate_conversion.py
nuke_CAM_exporter/configs/: camera_config_template copy.json  camera_config_template.json  camera_config_v01.json
nuke_CAM_exporter/debugging_issues/: bugs_reports_e.txt  bugs_reports_f.txt
nuke_CAM_exporter/docs/: NukeCam-2-Wan_explained.md  NukeCam-2-Wan_explained_no-HTML.md  README.md  camTrack_v01_converted_README.txt  process_resume.md
nuke_CAM_exporter/inputs/: camTrack_1.7m_v02.asci  camTrack_Latest.asci  nukeCam_unit-1-split_tr.asci  sh0031_split-ROT_.asci  sh0031_split-TR_.asci  sh0032_unit-1-combined_tmp.asci  sh0032_unit-1-split_rot.asci  sh0032_unit-1-split_tr.asci
nuke_CAM_exporter/outputs/: camTrack_1.7m_v01_converted.txt  camTrack_1.7m_v02_converted.txt  camTrack_v01_converted.txt  camTrack_v01_converted_81fr.txt  camTrack_v01_converted_v2.txt  camTrack_v01_converted_v3.txt  (+12 more)
scripts/: bootstrap_test_env.ps1  bootstrap_test_env.sh  loop_audio.config.json  loop_audio.py  make_card.py  make_card_audio.py  make_silent_wav.py  run_loop_demo_api_test.py  sync_investigation_patches.py  sync_to_dev.py  sync_to_dev_audio.py  transcribe_audio_timeline.py  validate_workflow.py  watch_cards.py
tests/: test_install_guard.py  test_vendored_exclusions.py
tools/: _preflight_dispatch.py  check_setup_run.py  collect_registry_metrics.py  preflight_release.py  report_mods.py
video_formats/: koolook-ASTRA-h264.json  koolook-ProRes.json
web/: ai_pipeline.js  curated_defaults.json  easy_video_combine.js  koolook_draft_guard.js  koolook_sidebar.js  published_setups_sample.json  setup_runner_simulator.html  setup_runner_simulator.js  starter_preset.json  widget_utils.js  workflow_defaults.json
(+279 files in other folders)
