[project]
name = "koolook"
description = "This repository provides custom nodes for ComfyUI tailored for VFX and AI image/video generation workflows"
version = "0.3.2"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/malkuthro/ComfyUI-Koolook"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://www.kforgelabs.com/comfyui-projects/comfyui-koolook/"
"Bug Tracker" = "https://github.com/malkuthro/ComfyUI-Koolook/issues"

[tool.comfy]
PublisherId = "kforgelabs"
DisplayName = "ComfyUI-Koolook"
Icon = ""
includes = []
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

[tool.ruff]
extend-exclude = [".venv", "forks", "upscaler_FIX", "nuke_CAM_exporter"]

[tool.ruff.lint.per-file-ignores]
"k_easy_resize.py" = ["F841"]

[tool.pytest.ini_options]
# ``testpaths`` scopes discovery to ``tests/``. ``pythonpath`` makes the repo
# root importable so tests can ``import koolook_routes`` without an editable
# install. ``importmode=importlib`` avoids the legacy ``sys.path.prepend``
# import dance so re-running individual files works cleanly.
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]

[project.optional-dependencies]
# Test deps for ``pytest`` runs. CI installs via ``pip install .[test]``;
# locally use ``.venv/bin/pip install -e '.[test]'`` from the repo root.
# ``aiohttp`` is a runtime dep of ``koolook_routes`` and must be importable
# even when only a pure helper is under test.
test = ["pytest>=8", "aiohttp>=3.9"]
