[project]
name = "radiance"
description = "bug fixes remove clamp and create radiance vae decode"
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["opencv-python", "imageio", "OpenEXR", "Imath", "opencolorio", "colour-science", "transformers"]

[project.urls]
Repository = "https://github.com/fxtdstudios/radiance"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://fxtd.org/radiance_docs/"
"Bug Tracker" = "https://fxtd.org/radiance_docs/faq.html"

[tool.comfy]
PublisherId = "fxtdstudios"
DisplayName = "radiance"
Icon = "docs/FLOGO.png"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

